# hapticctl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  flake.nix  hapticctl.1  pyproject.toml
contrib/: 70-hapticctl.rules
hapticctl/: __init__.py  __main__.py  flake.nix
systemd/: hapticctl-restore-system.service  hapticctl-restore.service
