[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hapticctl"
version = "0.1.0"
description = "Control haptic touchpad feedback intensity on Linux via HID"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "cmspam", email = "" }
]
keywords = ["haptic", "touchpad", "hid", "linux", "input"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/cmspam/hapticctl"
Repository = "https://github.com/cmspam/hapticctl"
"Bug Tracker" = "https://github.com/cmspam/hapticctl/issues"

[project.scripts]
hapticctl = "hapticctl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hapticctl*"]
